--- a/.gitconfig
+++ b/.gitconfig
@@ -32,6 +32,7 @@
 	attributesfile = ~/.gitattributes
 	# Treat spaces before tabs, lines that are indented with 8 or more spaces, and all kinds of trailing whitespace as an error
 	whitespace = space-before-tab,indent-with-non-tab,trailing-space
+	autocrlf = false
 
 [color]
 	# Use colors in Git commands that are capable of colored output when outputting to the terminal
@@ -71,3 +72,8 @@
 	pushInsteadOf = "git://gist.github.com/"
 [url "git://gist.github.com/"]
 	insteadOf = "gist:"
+[user]
+	name = ChiqingZhang
+	email = chiqing@appannie.com
+[push]
+	default = matching
